[package]
name = "CalcR_Core"
version = "0.1.0"
edition = "2021"
authors = ["Hiram Maximiliano Munoz Ramirez <hirammunozr@outlook.com>"]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
regex = "1"

[dependencies.lalrpop-util]
version = "0.19.6"
features = ["lexer"]

