[package]
name = "calc_r"
version = "0.1.0"
edition = "2021"
authors = ["Hiram Maximiliano Munoz Ramirez <hirammunozr@outlook.com>"]

[lib]
crate-type = ["lib", "staticlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
regex = "1"

[dependencies.lalrpop-util]
version = "0.19.6"
features = ["lexer"]

